--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.0
-requests==2.31.0
-python-dotenv==1.0.0
+Flask==3.0.3
+requests==2.32.3
+python-dotenv==1.0.1
 PyPDF2==3.0.1
-pandas==2.1.0
-numpy==1.26.4
+pandas==2.2.2
 
-# Optional/dev
-# gunicorn==20.1.0  # for production on Linux
+# Optional / dev
+# gunicorn==20.1.0  # for running on Linux production servers
+# numpy==1.26.4      # uncomment if you use numpy arrays
